security/network-policy/backend-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: default
spec:
  podSelector:        # For which Pod replicas do this policies apply? To all Pods in the default namesapce with label app:backend
    matchLabels:
      app: backend
  policyTypes:  # Types of Rules
  - Ingress     # Incoming Traffic Rules
  - Egress      # Outgoing Traffic Rules
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mongo
    ports:
    - protocol: TCP
      port: 27017
